[package]
name = "tgrrs"
version = "0.1.1"
authors = ["Oluwatobi Olajide <tobiolajide01@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/tobibytes/GrepRust"
repository = "https://github.com/tobibytes/GrepRust"
keywords = ["cli", "search", "rust", "grep"]
categories = ["command-line-utilities"]
edition = "2021"

[features]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"